--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medication-api",
+  "name": "med-manager",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -25,8 +25,8 @@
   "devDependencies": {
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
-    "prettier": "^2.1.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2"
   },
   "repository": {
     "type": "git",
