--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "install": "^0.13.0",
     "mysql2": "^3.9.1",
-    "sequelize": "^6.37.1"
+    "nodemailer": "^6.9.9",
+    "sequelize": "^6.37.1",
+    "smtp-server": "^3.13.2"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
